--- a/src/sass/utils/_sprites.scss
+++ b/src/sass/utils/_sprites.scss
@@ -1,4 +1,5 @@
 @use './color' as var;
+@use './unit' as *;
 
 $colors:(
   'Green': var.$green,
@@ -11,5 +12,23 @@ $colors:(
 @each $color, $color-value in $colors{
   .theme#{$color}{
     color: $color-value;
+  }
+}
+
+// 스프라이트 배경이미지
+.sprite{
+  min-height: rem(60px);
+  background-image: url(./../assets/images/sprite_main.png);
+  background-repeat: no-repeat;
+  padding-left: rem(64px);
+
+  $sprites: Book, Board, News, Favorite, Twitter;
+  $x: 0;
+  $y: 0;
+  @each $sprite in $sprites {
+    &#{$sprite}{
+        background-position: $x $y;
+    }
+    $y: $y - 115px;
   }
 }
