--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @use './unit' as *;
 // 고해상도 배경이미지 처리 ---------------------------------------------------- /
 @mixin bgRetina($file, $type) {
@@ -95,4 +96,24 @@
   grid-template-rows: auto;
   grid-column-gap: $column-gap;
   grid-row-gap: $row-gap;
+}
+
+@mixin responsIframe($w: 16, $h: 9){
+  position: relative; 
+  padding-top: math.div($h, $w) * 100%;
+  height: 0 !important;
+
+  iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@mixin textEllipis(){
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
